--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,67 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.mainPage {
+  margin-left: 5%;
+}
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
+  background : darkgrey;
+  color: white;
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navLinks { 
+  width: 15%;
+  display : flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+.images {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap : wrap;
+    min-width: 30%;
+}
+
+.search-form {
+  min-height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+}
+
+.search-bar{
+  width:50%;
+  padding :10px;
+}
+
+.date-search{
+  padding :10px;
+}
+
+.search-button {
+  background : grey;
+  border: none;
+  padding: 10px 20px;
+  color : white;
+}
+
+.imageRender{
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px grey;
+  margin: 20px;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  background:white;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  min-width: 40% ;
 }
